added more test cases